app/globals.css
@import "tailwindcss";

@theme {
  --font-inter: var(--font-inter), sans-serif;
  --font-jakarta: var(--font-jakarta), sans-serif;

  --text-xs: 0.8125rem;
  --text-xs--line-height: 1.5384;
  --text-sm: 0.875rem;
  --text-sm--line-height: 1.5715;
  --text-base: 0.9375rem;
  --text-base--line-height: 1.5333;
  --text-base--letter-spacing: -0.0125em;
  --text-lg: 1.125rem;
  --text-lg--line-height: 1.5;
  --text-lg--letter-spacing: -0.0125em;
  --text-xl: 1.25rem;
  --text-xl--line-height: 1.5;
  --text-xl--letter-spacing: -0.0125em;
  --text-2xl: 1.5rem;
  --text-2xl--line-height: 1.415;
  --text-2xl--letter-spacing: -0.0268em;
  --text-3xl: 1.75rem;
  --text-3xl--line-height: 1.3571;
  --text-3xl--letter-spacing: -0.0268em;
  --text-4xl: 2.5rem;
  --text-4xl--line-height: 1.1;
  --text-4xl--letter-spacing: -0.0268em;
  --text-5xl: 3.5rem;
  --text-5xl--line-height: 1;
  --text-5xl--letter-spacing: -0.0268em;

  --animate-gradient: gradient 6s linear infinite;

  @keyframes gradient {
    to {
      background-position: 200% center;
    }
  }
}

html {
  scroll-behavior: smooth;
}

@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

@layer components {
  .btn,
  .btn-sm {
    @apply inline-flex items-center justify-center whitespace-nowrap rounded-lg text-sm font-medium transition-all;
  }
  .btn {
    @apply px-4 py-[11px];
  }
  .btn-sm {
    @apply px-3 py-[7px];
  }
}

